# conan2-intro

./: CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt
.github/workflows/: hello.yml
src/: main.cpp  particles.hpp
tests/: particles.cpp
